k8s/aat/common/rpe/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rpe
  labels:
    slackChannel: rpe-build-notices
    hmcts.github.com/envInjector: enabled
---
