k8s/aat/common/rpe/pdf-service-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rate-limit: |
      extractorfunc: client.ip
      rateset:
        api-rateset:
          period: 60s
          average: 10
          burst: 20
  name: rpe-pdf-service
  namespace: rpe
spec:
  rules:
  - host: cmc-pdf-service-aat.service.core-compute-aat.internal
    http:
      paths:
      - backend:
          serviceName: pdf-service-java
          servicePort: 80
        path: /
